[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/AdventuraTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/GameScreen.gd" type="Script" id=2]
[ext_resource path="res://scenes/worlds/SinglePlayerWorld.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/FpsMeter.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/adventura_logo_small.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/MemoryUsage.tscn" type="PackedScene" id=6]

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 320 )
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="SinglePlayerWorld" parent="ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="GameWorldInfo" type="MarginContainer" parent="."]
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameWorldInfo"]
margin_left = 10.0
margin_top = 10.0
margin_right = 354.0
margin_bottom = 118.0
custom_constants/separation = 0

[node name="__LogoContainer" type="HBoxContainer" parent="GameWorldInfo/VBoxContainer"]
margin_right = 344.0
margin_bottom = 48.0

[node name="__AdventuraLogo" type="TextureRect" parent="GameWorldInfo/VBoxContainer/__LogoContainer"]
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 5 )

[node name="__AdventuraVersion" type="Label" parent="GameWorldInfo/VBoxContainer/__LogoContainer"]
margin_left = 260.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 31.0
text = "Version: 0.2"

[node name="FpsMeter" parent="GameWorldInfo/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 344.0
margin_bottom = 64.0

[node name="MemoryUsage" parent="GameWorldInfo/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 344.0
margin_bottom = 78.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameWorldInfo/VBoxContainer"]
margin_top = 78.0
margin_right = 344.0
margin_bottom = 93.0

[node name="__DepthLabelInfo" type="Label" parent="GameWorldInfo/VBoxContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "Depth: "

[node name="DepthLabel" type="Label" parent="GameWorldInfo/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 53.0
margin_bottom = 15.0
theme = ExtResource( 1 )

[node name="__FullscreenInfo" type="Label" parent="GameWorldInfo/VBoxContainer"]
margin_top = 93.0
margin_right = 344.0
margin_bottom = 108.0
theme = ExtResource( 1 )
text = "Click \"F11\" to toggle fullscreen mode"
